[INC-2] add lombok dependency, add config class.